# stratosampler

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  UV_EXAMPLES.md  UV_QUICK_REFERENCE.md  UV_SETUP.md  UV_SETUP_COMPLETE.md  UV_SETUP_SUMMARY.md  mkdocs.yml  properdocs.toml  properdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: deploy-docs.yml
docs/: api.md  examples.md  getting_started.md  index.md
examples/: chembl_egfr_stratified_sampling.py  egfr_chembl_ic50.py  loaders_examples.py
notebooks/: chembl_egfr_ic50.ipynb  egfr_stratified_sample.csv  examples.ipynb
stratosampler/: __init__.py
stratosampler/IO/: __init__.py  loaders.py
stratosampler/metrics/: distribution.py
stratosampler/splitters/: property_stratified.py
stratosampler/visualisation/: plots.py
tests/: test_loaders.py  test_splitter.py
